--- a/code/경개센_17조.ipynb
+++ b/code/경개센_17조.ipynb
@@ -1871,6 +1871,51 @@
    "source": [
     "df1[(df1['Dependents']=='No') & (df1['Partner']=='No')].groupby(['bin_charges', 'bin_tenure'])['Churn'].mean()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "603587fa",
+   "metadata": {},
+   "source": [
+    "## 결과"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e004f430",
+   "metadata": {},
+   "source": [
+    "### 집중 관리할 고객군\n",
+    "- 혼자 사는 고객\n",
+    "- 혼자 사는 고객 중 가입한지 얼마 안된 고객\n",
+    "- 노인 고객\n",
+    "- 가입한지 얼마 안 됐는데 납부 요금이 많은 고객"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3640e0a6",
+   "metadata": {},
+   "source": [
+    "### 추가로 확인할 데이터 \n",
+    "- 노인 고객\n",
+    "- 서비스를 종류에 따라 그룹화해서 비교\n",
+    "- 가입한 서비스의 조합에 따른 churn비율, loss\n",
+    "- 범주형 변수들 사이 비선형 상관관계 (phik?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee8874c5",
+   "metadata": {},
+   "source": [
+    "### 주어진 데이터로 확인할 수 없는 내용\n",
+    "- 이탈하는 시기에 패턴이 있는지\n",
+    "- 가입한 시기와 이탈이 상관이 있는지\n",
+    "- 서비스 자체에 변화가 있었는지 ex 제공하는 영화 변경\n",
+    "- 가입 기간 중 가입 서비스의 변경 내용\n",
+    "- 프로모션을 받고 가입했는지"
+   ]
   }
  ],
  "metadata": {
@@ -1904,7 +1949,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "307.2px"
+    "width": "307.199px"
    },
    "toc_section_display": true,
    "toc_window_display": true
